Fix overflowing select box.

--- a/src/features/misc-controls/MiscControls.module.css
+++ b/src/features/misc-controls/MiscControls.module.css
@@ -13,5 +13,12 @@
 }
 
 .fieldSelect {
-  flex: 1;
+  flex: 1 1;
+}
+
+.fieldSelect select {
+  box-sizing: border-box;
+  width: 100%;
+  margin-left: 0;
+  margin-right: 0;
 }
